--- a/package.json
+++ b/package.json
@@ -5,13 +5,20 @@
    "devDependencies": {
       "@types/express": "^4.17.13",
       "@types/node": "^8.0.29",
+      "@typescript-eslint/eslint-plugin": "^4.31.1",
+      "@typescript-eslint/parser": "^4.31.1",
+      "eslint": "7.12.1",
+      "eslint-config-standard": "^16.0.3",
+      "eslint-plugin-import": "2.22.1",
+      "eslint-plugin-node": "11.1.0",
+      "eslint-plugin-promise": "4.2.1",
+      "nodemon": "^2.0.12",
       "ts-node": "3.3.0",
-      "typescript": "3.3.3333"
+      "typescript": "^3.3.3333"
    },
    "dependencies": {
       "body-parser": "^1.18.1",
       "express": "^4.15.4",
-      "nodemon": "^2.0.12",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.10",
       "typeorm": "0.2.37"
